--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,11 @@
 			<artifactId>sendgrid-java</artifactId>
 			<version>4.7.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>5.3.8</version>
+		</dependency>
 
 	</dependencies>
 
