--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,10 +9,10 @@ spring.jpa.show-sql = true
 spring.jpa.hibernate.ddl-auto = update
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 
-amazon.aws.accesskey=AKIA6PS436XZ3KBU6GGT
-amazon.aws.secretkey=f1tHG0/r60bbay5b3jWIQl4ZpK9QlFTDIKE/nsha
-bucket.url=files.handson.academy
+amazon.aws.accesskey=your-access-key
+amazon.aws.secretkey=your-secret-key
+bucket.url=your-url
 
-sms4free.key=J2IX1eEa9
-sms4free.user=0525236451
-sms4free.password=66534228
+sms4free.key=your-key
+sms4free.user=your-user
+sms4free.password=your-password
